[package]
name    = "engine"
version = "0.1.0"
edition = "2021"
[dependencies]
crossbeam      = { workspace = true }
uuid           = { workspace = true }
derive_builder = { workspace = true }
rayon          = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
ftlog          = { workspace = true }
conf           = { path = "../conf" }
protocol       = { path = "../protocol" }
portfolio      = { path = "../portfolio" }
trader         = { path = "../trader" }
market_feed    = { path = "../market_feed" }
strategy       = { path = "../strategy" }
execution      = { path = "../execution" }
utils          = { path = "../utils" }
