[package]
name    = "market_feed"
version = "0.1.0"
edition = "2021"
[dependencies]
circular-queue = "0.2.6"
yata           = { workspace = true }
anyhow         = { workspace = true }
derive_builder = { workspace = true }
crossbeam      = { workspace = true }
ftlog          = { workspace = true }
futures        = { workspace = true }
tokio          = { workspace = true }
utils          = { path = "../utils" }
protocol       = { path = "../protocol" }
db             = { path = "../db" }
