[package]
name    = "market_feed"
version = "0.1.0"
edition = "2021"
[dependencies]
circular-queue = { workspace = true }
yata           = { workspace = true }
anyhow         = { workspace = true }
derive_builder = { workspace = true }
crossbeam      = { workspace = true }
ftlog          = { workspace = true }
futures        = { workspace = true }
tokio          = { workspace = true }
conf           = { path = "../conf" }
utils          = { path = "../utils" }
protocol       = { path = "../protocol" }
db             = { path = "../db" }
[features]
dev  = [ "conf/dev" ]
live = [ "conf/live" ]
