[package]
name    = "protocol"
version = "0.1.0"
edition = "2021"
[dependencies]
yata       = { workspace = true }
clickhouse = { workspace = true }
serde      = { workspace = true }
tokio      = { workspace = true }
chrono     = { workspace = true }
crossbeam  = { workspace = true }
anyhow     = { workspace = true }
dashmap    = { workspace = true }
